# genepi

./: .gitignore  README.md  pyproject.toml
src/fcp/: writter.py
src/genepi/: genepi.tcss  main.py  runner.py  services.py  utils.py
src/genepi/components/: helpers.py  pre_render_view.py  prepare_view.py  resources_view.py
src/genepi/components/Widgets/: directory_picker.py
src/genepi/data/: default.conf
src/genepi/data/ae_scripts/: genepi.js
src/genepi/models/: configuration.py  episode.py
