[project]
name = "genepi"
description = "Generate video episodes of Fantastic Rolls"
version = "2025.09.00"
requires-python = ">=3.10"
dependencies = ["art", "audio-metadata", "textual", "textual-fspicker"]


[project.urls]
Homepage = "https://fantastic-rolls.fr"


[project.optional-dependencies]
lint = ["mypy", "ruff"]
dev = ["textual-dev"]


[project.scripts]
genepi = "genepi.main:main"
genreel = "genepi.main:main"


[tool.setuptools.packages.find]
where = ["src/genepi/data"]


[tool.setuptools.package-data]
mypkg = ["*.conf", "*.js"]


[tool.ruff]
line-length = 89
indent-width = 4


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
